--- a/SDA_2018_Assign2MatthewFader2/app/src/main/res/layout/activity_main.xml
+++ b/SDA_2018_Assign2MatthewFader2/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:background="#ff921e"
-        android:onClick="buttonOne"
+        android:onClick="button1"
         android:text="@string/activity_main.button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +29,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:background="#60f736"
+        android:onClick="button2"
         android:text="@string/activity_main.button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,24 +44,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:background="#e378ed"
+        android:onClick="startMain2Activity"
         android:text="@string/activity_main.button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:background="#ed49b1"
-        android:text="@string/activity_main.button4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
 
     <Button
         android:id="@+id/button5"
@@ -73,7 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:paddingLeft="5dp"
         tools:paddingRight="5dp" />
 
@@ -91,4 +82,16 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:background="#ed49b1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        android:text="TextView
 </android.support.constraint.ConstraintLayout>
